# gquake

./: .gitignore  CMakeLists.txt  Makefile
id1/: autoexec.cfg  config.cfg
include/: common.h  cvar.h  d_iface.h  gl_model.h  glquake.h  glquake_implicit.h  keys.h  miniaudio.h  net.h  port.h  pr_comp.h  progdefs.h  progs.h  quakedef.h  server.h  sound.h  vid.h  world.h
src/: cd.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  cmd.c  common.c  console.c  cvar.c  gl.c  gl_draw.c  gl_mesh.c  gl_model.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_test.c  gl_warp.c  host.c  host_cmd.c  keys.c  menu.c  miniaudio.c  mix.c  net_bsd.c  net_dgrm.c  net_loop.c  net_main.c  net_udp.c  port.c  pr_cmds.c  pr_edict.c  pr_exec.c  proc.sh  quake.rc  sbar.c  snd_ma.c  snd_mem.c  (+11 more)
